scrollbar overflow issue fix

--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,7 @@
 .mask {
   -webkit-mask-image: linear-gradient(to top, transparent 5%, black 15%);
   mask-image: linear-gradient(to bottom, top 5%, black 15%);
+    overflow:hidden;
 }
 
 .smallcard{
